traefik-vpn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pmm-traefik-vpn-free-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: pmm-traefik-vpn-free
    k8s.kuboard.cn/workload: pmm-traefik-vpn-free
    kubernetes.io/ingress.class: "traefik-internet-vpn"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure

spec:
  tls:
    - hosts:
        - '*.development.npool.top'
        - development.npool.top
      secretName: development-npool-top-tls
  rules:
    - host: pmm.development.npool.top
      http: &http_rules
        paths:
          - path: /
            backend:
              serviceName: pmm-npool-top
              servicePort: 80
